--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -40,7 +40,7 @@
     font-weight: 700;
     font-size: calc(3vw + 40px);
     margin-bottom: 0;
-    color: #273B7B;
+    color: white;
   }
   
   .underHeader-homeStartImage{
