--- a/src/styles/Speakers.css
+++ b/src/styles/Speakers.css
@@ -46,8 +46,9 @@
 
 .header-search-container {
     display: flex;
-    align-items: center;
+    align-items: start;
     gap: calc(10vw + 5rem);
+    margin-left: 1rem;
 }
 
 @media (max-width: 768px) {
