--- a/src/styles/Speakers.css
+++ b/src/styles/Speakers.css
@@ -60,7 +60,9 @@
 
 .search-input {
     height: 50px;
-    margin-bottom: 40px;
+    margin: 2rem;
+    margin-left: 0;
+    margin-top: 1rem;
     border: 2px solid #F16876;
     color: #F16876;
     font-family: 'Roboto', sans-serif;
