--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -9,11 +9,32 @@
   perspective: 3000px;
 }
 
+.card-section-employee {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+  margin-top: 10px;
+  margin-left: 0;
+  margin-right: 4rem;
+  margin-bottom: 2rem;
+  padding-bottom: 50px;
+  perspective: 3000px;
+}
+
 @media (max-width: 768px) {
   .card-section {
     grid-template-columns: repeat(2, 1fr);
     margin-left: 1rem;
     margin-right: 1rem;
+    gap: 0.5rem;
+    overflow-x: hidden;
+  }
+
+  .card-section-employee {
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 0rem;
+    margin-right: 1rem;
+
     gap: 0.5rem;
     overflow-x: hidden;
   }
@@ -27,8 +48,19 @@
   transform-style: preserve-3d;
 }
 
+.card-employee {
+  position: relative;
+  height: 22rem;
+  width: 15rem;
+}
+
 @media (max-width: 768px) {
   .card {
+    height: 18rem;
+    width: calc(100%);
+  }
+
+  .card-employee {
     height: 18rem;
     width: calc(100%);
   }
@@ -44,7 +76,7 @@
 
 @media (min-width: 769px) {
   .card:hover {
-  transform: rotateY(180deg);
+    transform: rotateY(180deg);
   }
 }
 
@@ -58,6 +90,14 @@
 }
 
 .card-front {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #273B7B
+}
+
+.card-front-employee {
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -159,7 +199,7 @@
     justify-content: center;
   }
 
-  .name-mobile{
+  .name-mobile {
     display: none;
   }
 }
@@ -195,6 +235,7 @@
 }
 
 @media (max-width: 768px) {
+
   .topics-container,
   .roles-container {
     display: flex;
@@ -241,7 +282,7 @@
   /* Hindra radbrytning i ämnen */
 }
 
-.read-more-button{
+.read-more-button {
   height: 20px;
   width: 100%;
   background-color: transparent;
@@ -253,4 +294,22 @@
   font-size: 10px;
   margin-top: 10px;
   cursor: pointer;
+}
+
+.employee-phone-contact-container {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .employee-phone-contact-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    margin: 0.5rem;
+  }
+
+  .employee-desktop-contact-container {
+    display: none;
+  }
 }
