--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -96,9 +96,10 @@ nav {
   height: 100%;
   width: 200px;
   background-color: transparent;
-  border-radius: 0;
+  border-radius: 10px;
   font-size: 20px;
-  color: #273B7B;
+  background-color: #273B7B;
+  color: white;
   font-family: 'Roboto', sans-serif;
   margin-left: 20vh;
   transition: background-color 0.3s, color 0.3s;
@@ -108,7 +109,8 @@ nav {
 
 .contact-us-button:hover {
   border: 2px solid #F16876;
-  color: #F16876;
+  background-color: #F16876;
+  color: white;
 }
 
 /* Existing CSS code */
